Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24765

fseg_free_extent fails to call buf_page_free() for the whole segment

    XMLWordPrintable

Details

    Description

      InnoDB fails to clear all the pages present in buffer pool while freeing the extent. It is caused by MDEV-8139

              for (ulint i = 0; i < FSP_EXTENT_SIZE; i++) {
                      if (!xdes_is_free(descr, i)) {
                              buf_page_free(
      -                         page_id_t(space->id, first_page_in_extent + i),
      +                         page_id_t(space->id, first_page_in_extent + 1),
                                mtr, __FILE__, __LINE__);
                      }
              }
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              thiru Thirunarayanan Balathandayuthapani
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.