MDEV-24765 fseg_free_extent fails to call buf_page_free() for the whole segment

This is caused by commit c92f7e287fc0e21dc1b181284b1f8e2139d1c331(MDEV-8139).
InnoDB fails to set the page status as FREED in buffer pool while freeing
the extent.